<resources>
    <string name="app_name">AgroClinic</string>
    <string name="app_name_with_version">AgroClinic v1.0</string>
    <string name="agro_clinic">Agro Clinic</string>
    <string name="log_in">Login</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
    <string name="_100_tons_per_acer">100 Tons Per Acer</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_sms_text">Agro Clinic will send you an OTP \n for phone number verification.</string>
    <string name="verify_otp_and_login">VerifyOTP and Login</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="marathi">Marathi</string>
    <string name="submit">Submit</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_item">Intensive SugarCane Production Status and Future Directions</string>
    <string name="second_item">Land and Season for Sugarcane cultivation</string>
    <string name="third_item">Soil Test</string>
    <string name="fourth_item">Fertilization and Management of Amini and Substantial</string>
    <string name="fifth_item">Green fertilizer</string>
    <string name="sixth_item">Maximum cultivars for sugarcane cultivation and seed selection</string>
    <string name="seventh_item">Seed required for sugarcane cultivation as per rainfall and Otra</string>
    <string name="eigth_item">Sugarcane seed sowing process-importance</string>
    <string name="nineth_item">Sugarcane planting technology</string>
    <string name="tenth_item"> Chemical fertilizers required in season as per soil test.</string>
    <string name="eleven_item"> Micronutrients required for sugarcane crop</string>
    <string name="twelve_item">Central Fertilizer for Sugarcane Cultivation</string>
    <string name="thirteen_item"> Water management of sugarcane</string>
    <string name="fourteen_item">Sugarcane intercropping</string>
    <string name="fifteen_item">Pests and diseases on sugarcane and control</string>
    <string name="sixteen_item">Management of cassava crop</string>
    <string name="seventeen_item"> Making the living dead</string>
    <string name="eighteen_item"> Preparation of vermicompost.</string>
    <string name="profile">Profile</string>
    <string name="crops">Crops</string>
    <string name="home">Home</string>
    <string name="title_activity_tenth_table">TenthTable</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>