<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginActivities.MultiLanguageActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/login_background"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstrains">

        </LinearLayout>

        <TextView
            android:id="@+id/tvAgroClinic"
            style="@style/ACTextLargeBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/agro_clinic"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMain"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginEnd="@dimen/margin_large"
            android:visibility="invisible"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAgroClinic">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvSelectLanguage"
                    style="@style/ACTextLargeBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/select_language"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSelectLanguage">

                    <RadioButton
                        android:id="@+id/rbEnglish"
                        style="@style/ACTextMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/english" />

                    <RadioButton
                        android:id="@+id/rbMarathi"
                        style="@style/ACTextMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/marathi" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btSubmit"
                    android:background="@drawable/button_background"
                    android:layout_width="100dp"
                    android:text="@string/submit"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <View
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvMain">

        </View>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>