<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".loginActivities.RegistrationActivity">

            <LinearLayout
                android:id="@+id/linearLayoutInRegistration"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/login_background"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstrains">

            </LinearLayout>

            <TextView
                android:id="@+id/tvAgroClinic"
                style="@style/ACTextLargeBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/agro_clinic"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_marginEnd="@dimen/margin_large"
                android:visibility="visible"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAgroClinic">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvRegister"
                        style="@style/ACTextLargeBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/register" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:hint="@string/enter_your_name"
                        app:boxStrokeColor="@color/green">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietEnterName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/user"
                            android:drawablePadding="@dimen/padding_small"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:hint="@string/enter_phone_number"
                        app:boxStrokeColor="@color/green">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietEnterPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/phone_logo"
                            android:drawablePadding="@dimen/padding_small"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:hint="@string/enter_password"
                        app:boxStrokeColor="@color/green">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietEnterPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/password"
                            android:drawablePadding="@dimen/padding_small"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:hint="@string/confirm_password"
                        app:boxStrokeColor="@color/green">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/confirm_password"
                            android:drawablePadding="@dimen/padding_small"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btRegister"
                            style="@style/ACTextMediumBold"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:background="@drawable/button_background"
                            android:text="@string/register"
                            android:textColor="@color/white" />

                        <ProgressBar
                            android:id="@+id/pbSendingOtp"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:visibility="gone"
                android:id="@+id/tvAlreadyAccount"
                style="@style/ACTextMediumBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="center_horizontal"
                android:text="@string/already_have_an_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvMain" />

            <androidx.appcompat.widget.AppCompatButton
                android:visibility="gone"
                android:id="@+id/btLogin"
                style="@style/ACTextMediumBold"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/button_background"
                android:text="@string/log_in"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAlreadyAccount" />

            <View
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btLogin">

            </View>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>