<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".loginActivities.LoginActivity">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/login_background"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstrains">

            </LinearLayout>

            <TextView
                android:id="@+id/tvAgroClinic"
                style="@style/ACTextLargeBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/agro_clinic"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cvMain"
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_marginEnd="@dimen/margin_large"
                android:visibility="visible"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAgroClinic">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLogin"
                        style="@style/ACTextLargeBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/log_in" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_medium"
                        android:hint="@string/enter_phone_number"
                        app:boxStrokeColor="@color/green">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/phone_logo"
                            android:drawablePadding="@dimen/padding_small"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:hint="@string/enter_password"
                        app:boxStrokeColor="@color/green">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietEnterPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/password"
                            android:drawablePadding="@dimen/padding_small"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/forgot_password" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/ACTextMediumBold"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:background="@drawable/button_background"
                        android:text="@string/log_in"
                        android:textColor="@color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_medium"
                android:visibility="visible"
                app:cardCornerRadius="100dp"
                app:cardElevation="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvMain"
                app:layout_constraintEnd_toEndOf="@+id/cvMain"
                app:layout_constraintStart_toStartOf="@+id/cvMain"
                app:layout_constraintTop_toBottomOf="@+id/cvMain">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/google" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:visibility="visible"
                app:cardCornerRadius="100dp"
                app:cardElevation="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvMain"
                app:layout_constraintEnd_toStartOf="@+id/cvGoogle"
                app:layout_constraintTop_toBottomOf="@+id/cvMain">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/facebook" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvDontHaveAccount"
                style="@style/ACTextMediumBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="center_horizontal"
                android:text="@string/don_t_have_an_account"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvGoogle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btRegister"
                style="@style/ACTextMediumBold"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAccount" />

            <View
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btRegister">

            </View>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>